--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "express": "^4.21.1",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.7.1"
   },
   "description": ""
